# GitPulse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  architecture_md.md  claude_md.md  index.html  jest.config.cjs  package.json  pnpm-lock.yaml  prd_md.md  tsconfig.json  tsconfig.site.json  vite.config.ts  vite.site.config.ts
.claude/: skills.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
docs/: accessibility-onboarding.md  backend-module-split-notes.md  development-plan-v2.md  development-plan-v3.md  development-plan-v4.md  development-plan-v5.md  development-plan.md  release.md  security-dependency-status.md
site/: index.html
src/: App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: alias.rs  large_repo_benchmark.rs  lib.rs  test_utils.rs
src-tauri/src/aggregation/: engine.rs  formulas.rs  mod.rs
src-tauri/src/commands/: boxscore.rs  data.rs  developers.rs  health.rs  history.rs  insights.rs  mod.rs  recaps.rs  repo_import.rs  repos.rs  stats.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_aggregates.sql  003_scan_runs.sql  004_repo_branch_cursors.sql  005_dirty_aggregate_scopes.sql  006_single_running_scan.sql
src-tauri/src/git/: incremental.rs  mod.rs  rename.rs  scanner.rs
src-tauri/src/models/: commit.rs  developer.rs  dirty_scope.rs  mod.rs  repo.rs  repo_branch_cursor.rs  scan.rs  stats.rs
(+94 files in other folders)
