[package]
name = "gitpulse"
version = "0.2.0-rc.6"
description = "GitPulse — local Git repository analyser"
authors = ["Boblebol"]
license = "MIT"
repository = "https://github.com/Boblebol/GitPulse"
edition = "2021"

[lib]
name = "gitpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Formula evaluation (player score)
evalexpr = "11"

# Git
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
